--- a/app/design/adminhtml/default/backend/mui/elements.css
+++ b/app/design/adminhtml/default/backend/mui/elements.css
@@ -850,7 +850,7 @@
     top: 50%;
     left: 50%;
     margin: -12px 0 0 -12px;
-    background: url(images/ajax-loader.gif) no-repeat center;
+    background: #fff url(images/ajax-loader.gif) no-repeat center;
 }
 
 .loading-message {
